--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 quarkus.http.host=0.0.0.0
 quarkus.http.port=8084
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/tokendb
+quarkus.datasource.username=postgres
+quarkus.datasource.password=secret
+quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.log.sql=true
