Added Docker support with JVM mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-quarkus.http.host=0.0.0.0
 quarkus.http.port=8084
 
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/tokendb
-quarkus.datasource.username=postgres
-quarkus.datasource.password=secret
-quarkus.hibernate-orm.database.generation=update
-quarkus.hibernate-orm.log.sql=true
+service.account.path=${SERVICE_ACCOUNT_PATH:secrets/serviceAccountKey.json}
+#quarkus.datasource.db-kind=postgresql
+#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/tokendb
+#quarkus.datasource.username=postgres
+#quarkus.datasource.password=secret
+#quarkus.hibernate-orm.database.generation=update
+#quarkus.hibernate-orm.log.sql=true
+
+#quarkus.native.resources.includes=serviceAccountKey.json
+
+#quarkus.native.additional-build-args=\
+#--initialize-at-run-time=com.google.firebase,\
+#--initialize-at-run-time=com.google.api.client,\
+#--initialize-at-run-time=com.google.auth.oauth2,\
+#--initialize-at-run-time=io.grpc,\
+#--initialize-at-run-time=io.netty,\
+#--initialize-at-run-time=org.apache.http,\
+#--initialize-at-run-time=com.google.common.util.concurrent
