--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 quarkus.http.port=8084
 
 service.account.path=${SERVICE_ACCOUNT_PATH:secrets/serviceAccountKey.json}
-#quarkus.datasource.db-kind=postgresql
-#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/tokendb
-#quarkus.datasource.username=postgres
-#quarkus.datasource.password=secret
-#quarkus.hibernate-orm.database.generation=update
-#quarkus.hibernate-orm.log.sql=true
+
+
+quarkus.datasource.db-kind=${QUARKUS_DATASOURCE_DB_KIND:postgresql}
+quarkus.datasource.jdbc.url=${QUARKUS_DATASOURCE_JDBC_URL:jdbc:postgresql://localhost:5434/notificationdb}
+quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME:postgres}
+quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD:secret}
+quarkus.hibernate-orm.database.generation=${QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION: update}
 
 #quarkus.native.resources.includes=serviceAccountKey.json
 
