--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.http.port=8084
+quarkus.container-image.group=blaz040
 
 service.account.path=${SERVICE_ACCOUNT_PATH:secrets/serviceAccountKey.json}
 
